--- a/WebGLBuild/index.html
+++ b/WebGLBuild/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Node Browser Suff</title>
-    <link rel="shortcut icon" href="WebGLBuild/TemplateData/favicon.ico">
-    <link rel="stylesheet" href="WebGLBuild/TemplateData/style.css">
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
@@ -25,9 +25,8 @@
         <div id="unity-build-title">Node Browser Suff</div>
       </div>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
     <script>
-      var buildUrl = "WebGLBuild/Build";
+      var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGLBuild.loader.js";
       var config = {
         dataUrl: buildUrl + "/WebGLBuild.data",
@@ -68,8 +67,6 @@
       }
       loadingBar.style.display = "block";
 
-      var socket = io();
-
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
@@ -80,10 +77,6 @@
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
           };
-          socket.on('d', function(msg){
-            unityInstance.SendMessage('Main Camera', 'Receive', JSON.stringify(msg));
-          });
-          
         }).catch((message) => {
           alert(message);
         });
