--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         codeUrl: buildUrl + "/WebGLBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Node Browser Suff",
+        productName: "1v1 Typing Game",
         productVersion: "0.1",
       };
 
