--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Node Browser Suff</title>
+    <title>Unity WebGL Player | 1v1 Typing Game</title>
     <link rel="shortcut icon" href="WebGLBuild/TemplateData/favicon.ico">
     <link rel="stylesheet" href="WebGLBuild/TemplateData/style.css">
   </head>
