--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Node Browser Suff</div>
+        <div id="unity-build-title">1v1 Typing Game</div>
       </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
